--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,8 @@ body {
 .back-button {
     color: #005f73;
     text-decoration: none;
-    font-size: 15px;
-    background-color: none;
+    font-size: 18px;
+    background-color: #ffffff;
     position: absolute;
     top: 10px;
     /* Jarak dari atas */
